--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
 </head>
 <body>
     <h1>Cool project</h1>
+    <h1>Cool project</h1>
+    <h1>Cool project</h1>
+    <h1>Cool project</h1>
+    <h1>Cool project</h1>
 </body>
 </html>
